insert buttin nexus ti cntrole style

--- a/vanilla/index.html
+++ b/vanilla/index.html
@@ -14,8 +14,8 @@
     <script src="./js/cdn/NexusUI.js"></script>
 
     <script type="module">
-      import { builder } from "./js/main.js";
-      builder("#main");
+      import  op1js from "./main.js";
+      op1js("#main");
     </script>
   </body>
 </html>
