add pathSVF cdn cloudinary

--- a/vanilla/index.html
+++ b/vanilla/index.html
@@ -14,8 +14,8 @@
     <script src="./js/cdn/NexusUI.js"></script>
 
     <script type="module">
-      import  op1js from "./main.js";
-      op1js("#main");
+      import  useOp1 from "./main.js";
+      useOp1({id:"#main"});
     </script>
   </body>
 </html>
